k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: study-planner-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: study-planner
  template:
    metadata:
      labels:
        app: study-planner
    spec:
      containers:
      - name: study-planner-container
        image: study-planner:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
