k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: study-planner-service
spec:
  type: NodePort
  selector:
    app: study-planner
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
